# Freds-Monitor-Tool

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  apply-profile.cpp  console.cpp  console.hpp  create-profile.cpp  list-profiles.cpp  load-profile.cpp  query-displays.cpp  version.in.rc
src/lib/: CMakeLists.txt  Config.in.hpp  EnumAdapterDescs.cpp  Profile.cpp  QueryDisplayConfig.cpp  SetDisplayConfig.cpp  json.cpp
src/lib/include/FredEmmott/MonitorTool/: DisplayConfig.hpp  EnumAdapterDescs.hpp  Profile.hpp  QueryDisplayConfig.hpp  SetDisplayConfig.hpp  except.hpp  json.hpp
